// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormField /> should render FormField 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col space-y-2"
    id="field-email"
    role="group"
  >
    <label
      class="text-xs text-gray-900 inline-flex items-center justify-between"
      data-testid="testid-label"
      for="email"
      id="field-email-label"
    >
      Form label
    </label>
    <div
      class="relative inline-flex"
    >
      <div
        class=""
      />
      <input
        class="appearance-none w-full outline-none px-2 py-1 shadow-sm font-medium placeholder:text-gray-500 placeholder-text-cxs border h-6 border-gray-300 hover:border-gray-400 rounded-md text-gray-800 focus-visible:border-blue-500 focus-visible:shadow-input disabled:bg-gray-100 disabled:shadow-none disabled:cursor-not-allowed disabled:border-gray-300"
        data-testid="testid-input"
      />
      <div
        class=""
      />
    </div>
    <div
      class="text-xs text-gray-500 inline-flex items-center space-x-1 leading-4"
      data-testid="testid-hint"
      id="field-email-help-text"
    >
      This is hint text
    </div>
  </div>
</DocumentFragment>
`;

exports[`<FormField /> should support render props 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col space-y-2"
    id="field-email"
    role="group"
  >
    <label
      class="text-xs text-gray-900 inline-flex items-center justify-between"
      for="email"
      id="field-email-label"
    >
      Form label
    </label>
    <input
      aria-describedby="field-email-help-text"
      aria-invalid="true"
      aria-readonly="true"
      aria-required="true"
      disabled=""
      id="email"
      readonly=""
      required=""
    />
    <div
      class="text-xs text-gray-500 inline-flex items-center space-x-1 leading-4"
      id="field-email-help-text"
    >
      This is hint text
    </div>
    {
  "isRequired": true,
  "isInvalid": true,
  "isReadOnly": true,
  "isDisabled": true,
  "inputId": "email",
  "fieldId": "field-email",
  "labelId": "field-email-label",
  "errorTextId": "field-email-error-text",
  "helpTextId": "field-email-help-text",
  "hasHelpText": true,
  "hasErrorText": false
}
  </div>
</DocumentFragment>
`;
